<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/blue_action_bar_background"
                tools:context="gangwal.org.todo.fragments.TaskDialog">
    <TextView
        android:id="@+id/editText2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/edittext2_label"
        android:textColor="#ff1c61ff"
        />

    <EditText
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/editText2_label"
        android:singleLine="true"
        android:textColor="#ff1c61ff"
        />


    <TextView
        android:id="@+id/due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_button"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff1c61ff"
        />

    <TextView
        android:id="@+id/date_picker_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/due_date_label"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:text="@string/date_picker_label"
        android:textColor="#ff1c61ff"
        />

    <TextView
        android:id="@+id/time_picker_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/time_picker_label"
        android:textColor="#ff1c61ff"
        android:layout_toStartOf="@+id/date_pick"
        android:layout_toLeftOf="@+id/date_pick"
        android:layout_below="@+id/due_date_label" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:id="@+id/date_pick"
        android:src="@drawable/date"
        android:background="@null"
        android:layout_alignTop="@+id/due_date_label"
        android:layout_toRightOf="@+id/priority_dropdown"
        android:layout_toEndOf="@+id/priority_dropdown" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time"
        android:id="@+id/time_pick"
        android:layout_toEndOf="@+id/date_pick"
        android:src="@drawable/time"
        android:background="@null"
        android:layout_alignTop="@+id/date_pick"
        android:layout_toRightOf="@+id/date_pick" />

    <TextView
        android:id="@+id/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker_label"
        android:text="@string/priority_label"
        android:textColor="#ff1c61ff"
        />


    <Spinner
        android:id="@+id/priority_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:entries="@array/priority_array"
        android:layout_below="@+id/priority_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#ff1c61ff"

        />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/priority_dropdown"
        android:text="@string/description"
        android:textColor="#ff1c61ff"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/description_label"
        android:textSize="10dp"
        android:singleLine="true"
        android:textColor="#ff1c61ff"
        />

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label"
        android:src="@drawable/save"
        android:background="@null"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/reset"
        android:layout_marginRight="10dp"/>

    <ImageButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button_label"
        android:layout_toEndOf="@+id/editText2_label"
        android:src="@drawable/reset"
        android:background="@null"
        android:layout_toStartOf="@+id/time_pick"
        android:layout_below="@+id/description"
        android:layout_alignLeft="@+id/time_picker_label"
        android:layout_alignStart="@+id/time_picker_label" />

</RelativeLayout>
